--- a/src/Components/Bio/Bio.module.css
+++ b/src/Components/Bio/Bio.module.css
@@ -2,11 +2,20 @@
     width: 100%;
     height: 400px;
     display: flex;
-    flex-direction: column;
-    background-image: url(./bkgBio.jpg);
     background-position: center; 
+    background-image: url(./bkgBio.jpg);    
 }
 
-.Bio > img {
-    width:200px;
+.minhaFoto {
+    max-width:100%;
+}
+
+.Bio > p {
+    margin: 7% 10%;
+    width: 50%;
+    
+}
+
+.centralizaImagem {
+    top: 12%;
 }
