--- a/src/Components/Bio/Bio.module.css
+++ b/src/Components/Bio/Bio.module.css
@@ -2,22 +2,26 @@
     padding: 30px 50px;
     height: 400px;
     display: flex;
-    background-position: center; 
+    background-position: center;
+    flex-direction: column;
+    align-items: center;
 }
 
 .minhaFoto {
-    width: 30%;
+    height: 175px;
+    margin-left: 30px;
 }
 
 .Bio > p {
     margin: 7% 10%;
     width: 50%;
-    
 }
 
 .container {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
 
 .container  > p {
