Estiliza hover da Bio e inicia estilo da Timeline

--- a/src/Components/Bio/Bio.module.css
+++ b/src/Components/Bio/Bio.module.css
@@ -1,46 +1,52 @@
 .Bio {
-    padding: 30px 50px;
-    height: 400px;
-    display: flex;
-    background-position: center;
-    flex-direction: column;
-    align-items: center;
+  padding: 30px 50px;
+  height: 400px;
+  display: flex;
+  background-position: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 .minhaFoto {
-    height: 175px;
-    margin-left: 30px;
-    box-shadow: 0 0px 50px 0 rgba(232, 155, 227, 0.25), 0 0px 51px 0 rgba(255, 4, 236, 0.17);
+  height: 175px;
+  margin-left: 30px;
+  box-shadow: 0 0px 50px 0 rgba(232, 155, 227, 0.25),
+    0 0px 51px 0 rgba(255, 4, 236, 0.17);
 }
 
 .Bio > p {
-    margin: 7% 10%;
-    width: 50%;
+  margin: 7% 10%;
+  width: 50%;
 }
 
 .container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
-.container  > p {
-    width: 60%;
+.container > p {
+  width: 60%;
 }
 
 .Bio > h1 {
-    color: white;
-    -webkit-text-stroke-width: 1px;
-    -webkit-text-stroke-color: #f18ddb;
-    text-shadow: #d072bc 1px 3px 20px;
+  color: white;
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: #f18ddb;
+  text-shadow: #d072bc 1px 3px 20px;
 }
 
 .btnPink {
-    color: white;
-    background-color: #f18ddb;
-    border-radius: 21px;
-    border: 1px solid #f18ddb;
-    padding: 8px 12px;
-    box-shadow: 0 2px 20px 0 rgba(0, 0, 0, 0.09), 0 9px 14px 0 rgba(0, 0, 0, 0.17);
+  color: white;
+  background-color: #f18ddb;
+  border-radius: 21px;
+  border: 1px solid #f18ddb;
+  padding: 8px 12px;
+  box-shadow: 0 2px 20px 0 rgba(0, 0, 0, 0.09), 0 9px 14px 0 rgba(0, 0, 0, 0.17);
+}
+
+.btnPink:hover {
+    color: #f18ddb;
+    background-color: #f7dcf5;
 }
